bb-47: fixed the mobile layout of the episode page. updated the breadcrumbs to shrink on smaller screens.

--- a/src/main/react-ui/apps/app/src/components/episode-details/episode-details.scss
+++ b/src/main/react-ui/apps/app/src/components/episode-details/episode-details.scss
@@ -14,6 +14,10 @@
   .episode-details {
     flex-wrap: wrap;
   }
+
+  .episode-details-thumbnail {
+    margin: auto;
+  }
 }
 
 .episode-details-thumbnail {
